--- a/helm-chart/sock-shop/templates/ingress.yaml
+++ b/helm-chart/sock-shop/templates/ingress.yaml
@@ -5,8 +5,9 @@ metadata:
 {{ toYaml .Values.ingress.annotations | indent 4 }}
   labels:
 {{ toYaml .Values.ingress.labels | indent 4 }}
-  name: {{ template "fullname" .}}-socks-ingress
+  name: {{ template "fullname" .}}-ingress
 spec:
+  ingressClassName: {{ .Values.ingress.ingressClassName }}
   rules:
   - http:
       paths:
