--- a/helm-chart/sock-shop/values.yaml
+++ b/helm-chart/sock-shop/values.yaml
@@ -12,10 +12,11 @@ istio:
 
 ingress:
     annotations:
-        kubernetes.io/ingress.class: nginx
+        nginx.ingress.kubernetes.io/backend-protocol: HTTP
     labels: {}
     host: ''
     tlsSecretName: ''
+    ingressClassName: 'nginx'
 
 cartsdb:
     image:
